# yi-voice-eval

./: .env.example  .gitignore  00_inspect_audio.ipynb  01-5_test_whisper_api_sarvam_transliteration_single.ipynb  01_test_sarvam_single.ipynb  01_test_whisper_api_single.ipynb  01_test_whisper_local_single.ipynb  01_whisper_api_single.ipynb  02_sarvam_api_single.ipynb  03_whisper_sarvam_combined_single.ipynb  04_test_openai_transliteration_single.ipynb  05_whisper_gpt4o_combined_single.ipynb  06_batch_whisper_gpt4o_all_files.ipynb  07_convert_audio_formats.ipynb  08_format_results_to_csv.ipynb  09_compare_openai_audio_models.ipynb  10_azure_batch_transcription.ipynb  pyproject.toml  readme.md  test_hello.ipynb  test_library.ipynb  test_storage.ipynb
config/: manifest_kannada_stt_haveri.yaml
files/: sample.txt
files/nested/: sample.txt
scripts/: azure_batch_transcribe.py  compare_openai_audio_models.py  evaluate_transcriptions.py  format_results_to_csv.py
src/voice_eval/: __init__.py  audio_metadata.py  azure_batch_api.py  config.py  gpt_transliteration.py  sarvam_api.py  sarvam_transcription.py  storage.py  utils.py  whisper_api.py
